--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,64 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Cutive&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Yanone+Kaffeesatz:wght@200;300;400;500;600;700&display=swap');
+
+
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Cutive', serif;
+  font-family: 'Rubik', sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background: #062c43;
+}
+
+h1,
+h4,
+p,
+a {
+  color: white;
+  text-transform: none;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.btn {
+  padding: 12px 32px;
+  font-size: 2rem;
+  text-transform: uppercase;
+  background: rgb(22, 201, 246);
+  color: #222;
+  border: 1px solid #fff;
+  font-weight: 600;
+  cursor: pointer;
+  border-radius: 2px;
+}
+
+.btn-light {
+  padding: 12px 32px;
+  font-size: 2rem;
+  text-transform: uppercase;
+  background: rgb(225, 227, 244);
+  color: #222;
+  border: 1px solid #fff;
+  font-weight: 600;
+  cursor: pointer;
+  border-radius: 2px;
+}
+
+.btn:hover {
+  background: rgba(255, 255, 255, 0.2);
+  color: #fff;
+  transition: 0.3s
+}
+
+.btn-light:hover {
+  background: rgba(255, 255, 255, 0.2);
+  color: #fff;
+  transition: 0.3s
 }
