changed blog text size

--- a/src/Components/BlogContent.css
+++ b/src/Components/BlogContent.css
@@ -27,7 +27,7 @@
 
 .blog-details p {
     padding-bottom: 1rem;
-    font-size: 1.1rem;
+    font-size: 20px;
     text-align: justify;
     max-width: 500px;
 }
