--- a/src/Components/BlogContent.css
+++ b/src/Components/BlogContent.css
@@ -44,4 +44,13 @@
         grid-template-columns: 1fr;
     }
 
+    .blog-container {
+        margin: auto;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 40px;
+        padding-bottom: 5rem;
+        margin-top: 50px;
+    }
+
 }
