--- a/src/Components/BlogContent.css
+++ b/src/Components/BlogContent.css
@@ -31,7 +31,7 @@
     font-size: 18px;
     text-align: justify;
     max-width: 500px;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Nunito', sans-serif;
     color: black;
 
 }
