--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -41,9 +41,14 @@
     margin-top: 1rem;
 }
 
+p {
+    font-family: 'Nunito', sans-serif
+}
+
 h4 {
     font-size: 25px;
     padding-bottom: 0.7rem;
+    font-family: 'Nunito', sans-serif
 }
 
 @media screen and (max-width: 640px) {
