--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Cutive', serif;
+  /* font-family: 'Nunito', sans-serif; */
   font-family: 'Rubik', sans-serif;
   font-family: 'Yanone Kaffeesatz', sans-serif;
 
