--- a/src/Components/Pickup.css
+++ b/src/Components/Pickup.css
@@ -1,28 +1,34 @@
-.project-heading {
+.pickup-project-heading {
     text-align: center;
     padding: 4rem 0 2rem 0;
 }
 
-.work-container {
+/* .work-container {
     max-width: 1500px;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 40px;
     padding-bottom: 5rem;
+} */
+
+.pickup-work-container {
+    display: flex;
+    justify-content: center;
 }
 
-.project-container {
+.pickup-project-container {
     min-height: 100%;
-    max-width: 1140px;
+    max-width: 60%;
     margin: auto;
-    display: grid;
+    /* display: grid; */
     /* grid-template-columns: repeat(3, 1fr); */
     grid-gap: 40px;
     padding-bottom: 5rem;
 }
 
-.project-card {
+.pickup-project-card {
+    margin-top: 100px;
     background: #1a1919;
     padding: 1.2rem 1rem;
     min-height: 550px;
@@ -30,17 +36,17 @@
     position: relative;
 }
 
-.project-card img {
+.pickup-project-card img {
     width: 100%;
 }
 
-.project-title {
+.pickup-project-title {
     color: white;
     padding: 1rem 0;
     font-size: 30px;
 }
 
-.project-details p {
+.pickup-project-details p {
     padding-bottom: 1rem;
     font-size: 20px;
     text-align: justify;
@@ -74,9 +80,42 @@
 
 }
 
+.pickup-buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.pickup-btn {
+    padding: 12px 32px;
+    font-size: 2rem;
+    text-transform: uppercase;
+    background: rgb(22, 201, 246);
+    color: #222;
+    border: 1px solid #fff;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 2px;
+    transition: 0.3s;
+    text-decoration: none;
+}
+
+.pickup-btn-light {
+    padding: 12px 32px;
+    font-size: 2rem;
+    text-transform: uppercase;
+    background: rgb(225, 227, 244);
+    color: #222;
+    border: 1px solid #fff;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 2px;
+    transition: 0.3s;
+    text-decoration: none;
+}
+
 
 @media screen and (max-width: 740px) {
-    .project-container {
+    .pickup-project-container {
         max-width: 90%;
         margin: auto;
         grid-template-columns: 1fr;
