--- a/src/Components/WorkCard.css
+++ b/src/Components/WorkCard.css
@@ -76,6 +76,16 @@
 
 
 @media screen and (max-width: 740px) {
+
+    .work-container {
+        margin: auto;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 40px;
+        padding-bottom: 5rem;
+        margin-top: 50px;
+    }
+
     .project-container {
         max-width: 90%;
         margin: auto;
