--- a/src/Components/WorkCard.css
+++ b/src/Components/WorkCard.css
@@ -5,7 +5,7 @@
 
 .work-container {
     max-width: 1500px;
-    margin: auto;
+    margin: 15px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 40px;
