--- a/src/Components/WorkCard.css
+++ b/src/Components/WorkCard.css
@@ -4,7 +4,7 @@
 }
 
 .work-container {
-    max-width: 1500px;
+    /* max-width: 1500px; */
     margin: 15px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
