--- a/src/CSS/About.css
+++ b/src/CSS/About.css
@@ -1,15 +1,85 @@
+.topAboutContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .mainContainer {
-    margin-top: '10%';
+    /* margin-top: 10%; */
+    padding: 20px;
+    margin: 20px;
+    margin-top: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 70%
 }
 
 .mainHeadingAbout {
+    font-size: 6rem;
     color: black;
 }
 
 .firstPara {
     color: gray;
+    font-size: 1.2rem;
+    opacity: 70%;
+    margin-top: 1.5rem;
+    line-height: 1.5;
+}
+
+.descriptionAbout {
+    width: auto;
+    margin-top: 2rem;
 }
 
 .secondPara {
-    color: gray
+    color: gray;
+    opacity: 90%;
+    line-height: 1.7;
+}
+
+.leftAbout {
+    margin: 20px;
+    padding: 20px;
+}
+
+.rightAbout {}
+
+.profilePhoto {
+    max-width: 100%;
+    padding: 0.5rem;
+    /* Ensure the image doesn't overflow */
+    height: auto;
+    /* Maintain aspect ratio */
+    border-radius: 40%;
+    border-top-left-radius: 30%;
+    border-bottom-right-radius: 20%;
+    border-bottom-right-radius: 10%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 1.5);
+    /* Optional: add a shadow for better visuals */
+}
+
+.imagesContainer {
+    width: 100%;
+
+}
+
+.imageList {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.image {
+    margin: 0 10px
+}
+
+.smallImage {
+    width: 13rem;
+    height: 7rem;
+    object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
