--- a/src/CSS/NavBar.css
+++ b/src/CSS/NavBar.css
@@ -4,16 +4,17 @@
     align-items: center;
     width: 100%;
     padding: 10px;
-    background-color: #333;
+    background-color: whitesmoke;
     color: #fff;
     box-sizing: border-box;
     opacity: 95%;
+    box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 .mainHeading {
     text-decoration: none;
     font-size: 1.5rem;
-    color: #fff;
+    color: black;
 }
 
 .mainHeading:hover {
@@ -41,7 +42,7 @@
 }
 
 .link {
-    color: #fff;
+    color: black;
     text-decoration: none;
     font-size: 1.2rem;
     position: relative;
