--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -21,7 +21,7 @@
 .projectsHeading {
     color: #333;
     font-size: 2.5rem;
-    font-weight: bold;
+    font-weight: lighter;
     text-align: center;
     margin-bottom: 0;
 
@@ -41,15 +41,15 @@
 
 .projectTitle {
     color: #333;
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 1.4rem;
+    font-weight: lighter;
     margin: 0;
 }
 
 .projectTitleLink {
     color: #007bff;
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 1.4rem;
+    font-weight: lighter;
     margin: 0;
     cursor: pointer;
     display: inline-block;
@@ -72,4 +72,11 @@
     font-size: 0.9rem;
     margin-top: 0.5rem;
     line-height: 1.5;
+}
+
+.highlight {
+    font-weight: bolder;
+    font-size: 0.9rem;
+    color: #000;
+    font-family: 'Cutive', serif;
 }
