--- a/src/CSS/About.css
+++ b/src/CSS/About.css
@@ -82,6 +82,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
+
 @media (max-width: 912px) {
 
     .imageList {
@@ -93,15 +94,28 @@
     }
 }
 
+
 @media (max-width: 500px) {
 
     .mainContainer {
         flex-direction: column;
         max-width: 95%;
+        margin: auto;
+        padding: 15px;
     }
 
     .mainHeadingAbout {
-        font-size: 3rem;
+        font-size: 5rem;
+    }
+
+    .profilePhoto {
+        height: 12rem;
+        width: 11rem;
+        padding: 0.2rem;
+        border-radius: 40%;
+        border-top-left-radius: 30%;
+        border-bottom-right-radius: 10%;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 1.5);
     }
 
     .firstPara,
@@ -110,8 +124,8 @@
     }
 
     .smallImage {
-        width: 6rem;
-        height: 4rem;
+        width: 8rem;
+        height: 4.5rem;
     }
 
     .imagesContainer {
