--- a/src/CSS/NavBar.css
+++ b/src/CSS/NavBar.css
@@ -52,6 +52,20 @@
     cursor: pointer;
 }
 
-.link:hover {
-    text-decoration: underline;
+.link::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    display: block;
+    margin-top: 0;
+    right: 0;
+    background: black;
+    transition: width 0.3s ease, right 0.3s ease;
+}
+
+.link:hover::after {
+    width: 68%;
+    left: 0;
+    margin: 0 10px;
 }
