--- a/src/CSS/Blog.css
+++ b/src/CSS/Blog.css
@@ -1,3 +1,16 @@
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
+.slick-prev:before,
+.slick-next:before {
+    color: #333;
+}
+
+.slick-slide {
+    display: flex;
+    justify-content: center;
+}
+
 .blogContainer {
     display: flex;
     justify-content: center;
@@ -57,7 +70,7 @@
 
 .blogTimeContainer {
     display: flex;
-    max-width: 25%;
+    max-width: 20%;
     justify-content: space-between;
 }
 
@@ -96,24 +109,6 @@
     object-fit: cover;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-}
-
-.paginationButtons {
-    display: flex;
-    justify-content: space-between;
-    position: absolute;
-    width: 100%;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.paginationButton {
-    background-color: transparent;
-    border: none;
-    font-size: 1.5rem;
-    cursor: pointer;
-    color: #333;
-    padding: 0.5rem;
 }
 
 @media (max-width: 912px) {
